# candidates-data

./: README.md  candidates_openings.ipynb  pyproject.toml
